# esp32-vibe-rgb

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
main/: CMakeLists.txt  Kconfig.projbuild  config.h  effects.c  effects.h  idf_component.yml  led.c  led.h  led_fb.c  led_hw.c  led_map.c  led_priv.h  main.c  mic.c  mic.h  palettes.h  settings.c  settings.h  wifi_ctrl.c  wifi_ctrl.h  wifi_prov.c  wifi_prov.h
main/effects/: effects_core.c  effects_internal.h  fx_freq.c  fx_gravity.c  fx_misc.c  fx_noise.c  palettes.h
main/html/: ctrl.html  ctrl.js  prov.html  style.css
main/led/: led.h  led_fb.c  led_hw.c  led_map.c  led_priv.h
main/net/: captive_dns.c  captive_dns.h  http_server.c  http_server.h  net_init.c  net_init.h  settings_json.c  settings_json.h  wifi_prov.c  wifi_prov.h  wifi_sta.c  wifi_sta.h  ws_push.c  ws_push.h
