idf_component_register(
    SRCS
        "main.c"
        "settings.c"
        "led/led_map.c"
        "led/led_fb.c"
        "led/led_hw.c"
        "mic.c"
        "effects/effects_core.c"
        "effects/fx_freq.c"
        "effects/fx_gravity.c"
        "effects/fx_noise.c"
        "effects/fx_misc.c"
        "net/net_init.c"
        "net/wifi_sta.c"
        "net/wifi_prov.c"
        "net/captive_dns.c"
        "net/settings_json.c"
        "net/ws_push.c"
        "net/http_server.c"
    INCLUDE_DIRS "." "led" "effects" "net"
    PRIV_REQUIRES
        driver
        esp_wifi
        esp_netif
        esp_event
        esp_http_server
        esp_timer
        esp-dsp
        json
        led_strip
        lwip
        nvs_flash
    EMBED_FILES
        "html/style.css"
        "html/prov.html"
        "html/ctrl.html"
        "html/ctrl.js"
)
